--- a/my-project/app/globals.css
+++ b/my-project/app/globals.css
@@ -1,9 +1,5 @@
 @import "tailwindcss";
 
-<<<<<<< HEAD
-
-=======
->>>>>>> d662ec0b4c7e26fe3a60a3e3497bf5d1564a26a9
 .animate-fluid-bounce {
   animation: spin-animation 2s infinite;
 }
@@ -25,10 +21,7 @@
     animation-timing-function: cubic-bezier(0.8, 0.2, 1, 1);
   }
 }
-<<<<<<< HEAD
 
-=======
->>>>>>> d662ec0b4c7e26fe3a60a3e3497bf5d1564a26a9
 .smooth-link {
   position: relative;
 }
@@ -46,7 +39,39 @@
 .smooth-link.active::after {
   width: 100%;
 }
-<<<<<<< HEAD
+@keyframes fadeSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
-=======
->>>>>>> d662ec0b4c7e26fe3a60a3e3497bf5d1564a26a9
+.animate-fadeSlideUp {
+  animation: fadeSlideUp 2s ease-out forwards;
+}
+.hover\:underline-animation-b {
+  position: relative;
+  overflow: hidden;
+}
+
+.hover\:underline-animation-b::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #0e7d1b; /* Culoare underline */
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.5s ease-out;
+}
+
+.hover\:underline-animation-b:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
